@@ -8,6 +8,7 @@ version 0.6.2 - xx-Dec-2008
  . Director: Touches work fast again (issue #126)
  . License: removed "GNU LGPL" from sources files (issue #115)
  . License: fixed grammar errors (issue #120)
+ . Sprite & Animation: can be created from Texture2D, updated SpriteDemo example (issue #113)
  . TextureMgr: Avois duplicate cache (issue #121)
  . Transitions: FadeTransition supports variable color. Updated TransitionsDemo (issue #129)
  
